<resources>
    <string name="ns_tweak">Tweak</string>
    <string name="fast_charge_tweak">Fast Charge</string>
    <string name="bld_tweak">Backlight Dimmer</string>
    <string name="bln_tweak">Backlight Notification</string>
    <string name="label_bln_blink">Blink Status</string>
    <string name="label_bln_blink_interval">Blink Interval</string>
    <string name="label_bln_blink_count">Max Blink Count</string>
    <string name="label_bln_timeout">Led Timeout</string>
    <string name="blx_tweak">Battery Life Extender</string>
    <string name="label_charging_limit">Charging Limit</string>
	<string name="cmled_tweak">CMLed</string>
    <string name="label_cmled_bltimeout">Led Timeout</string>
    <string name="label_cmled_blink">Blink</string>
    <string name="label_cmled_blinktimeout">Blink Timeout</string>
    <string name="touchwake_tweak">Touchwake</string>
	<string name="iosched_tweak">IO Scheduler</string>
	<string name="label_iosched">Active scheduler</string>
    <string name="led_control">LED Control</string>
    <string name="led_fade_control">Enable Fading</string>
    <string name="led_intensity">Brightness</string>
    <string name="label_led_intensity">LED Brightness</string>
    <string name="led_speed">Speed</string>
    <string name="label_led_speed">Speed</string>
    <string name="led_slope_up_1">LED Slope Up1</string>
    <string name="led_slope_up_2">LED Slope Up2</string>
    <string name="led_slope_down_1">LED Slope Down1</string>
    <string name="led_slope_down_2">LED Slope Down2</string>
    <string name="label_led_slope_up_1">Slope Up1</string>
    <string name="label_led_slope_up_2">Slope Up2</string>
    <string name="label_led_slope_down_1">Slope Down1</string>
    <string name="label_led_slope_down_2">Slope Down2</string>
    <string name="touch_led_handling">Touchkey backlight settings</string>
    <string name="label_touch_led_handling">Kernel controls backlight</string>
    <string name="label_touch_led_on_screen_touch">Light up on screen touch</string>
    <string name="label_touch_led_force_disable">Completely disable backlight</string>
    <string name="label_touch_led_timeout">Backlight timeout</string>
    <string name="label_performance_tweak">Performance Settings</string>
    <string name="voltage_control">Voltages</string>
    <string name="cpu_voltage_category">CPU Voltage Control</string>
    <string name="cpu_voltage_control">CPU Voltage</string>
    <string name="gpu_voltage_category">GPU Voltage Control</string>
    <string name="gpu_voltage_control">GPU Voltage</string>
    <string name="label_default_voltage">Default voltages</string>
    <string name="summaryOn_default_voltage">Use voltage settings from kernel</string>
    <string name="summaryOff_default_voltage">Use customized voltage settings below</string>
    <string name="arm_voltage">Arm Voltage</string>
    <string name="label_max_arm_volt">Max Arm Volt</string>
    <string name="int_voltage">Int Voltage</string>
    <string name="label_max_int_volt">Max Int Volt</string>
    <string name="warning_message">These settings are dangerous. Use at your own risk.</string>
    <string name="dontshow_message">Don\'t show this message again</string>
    <string name="label_status">Status</string>
    <string name="label_delay">Delay</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_save">Save</string>
    <string name="label_load">Load</string>
    <string name="label_warning">WARNING</string>
    <string name="status_on"><b>ON</b></string>
    <string name="status_off"><b>OFF</b></string>
    <string name="status_not_available"><i>not available</i></string>
    <string name="label_setting">Setting</string>
    <string name="label_reboot_preference">Which rom to boot next time</string>
    <string name="summaryOn_reboot_preference">Rebooting into secondary rom</string>
    <string name="summaryOff_reboot_preference">Rebooting into primary rom</string>
    <string name="label_restore_on_boot">Set on boot</string>
    <string name="summaryOn_restore_on_boot">Settings will persist across reboots</string>
    <string name="summaryOff_restore_on_boot">Reset to default settings on boot</string>
    <string name="label_force_restore_on_boot">Ignore Kernel Version</string>
    <string name="summaryOn_force_restore_on_boot">Settings apply even after Kernel change</string>
    <string name="summaryOff_force_restore_on_boot">Reset to default settings on boot if Kernel changend</string>
    <string name="label_deviltools_service">DevilTools service</string>
    <string name="summaryOn_deviltools_service">Enable service for BLN missed call and timeout</string>
    <string name="summaryOff_deviltools_service">Disable service for BLN missed call and timeout</string>
    <string name="label_load_settings">Load</string>
    <string name="summary_load_settings">Load settings from saved file</string>
    <string name="label_save_settings">Save</string>
    <string name="summary_save_settings">Save current settings to file</string>
    <string name="save_success_message">Settings saved</string>
    <string name="save_failed_message">Failed to save settings</string>
    <string name="label_delete_settings">Delete</string>
    <string name="summary_delete_settings">Delete saved file</string>
    <string name="label_about">About</string>
    <string name="about_text">DevilTools on XDA</string>
    <string name="about_desc">Visit DevilTools thread on XDA</string>
    <string name="label_donation">Donation</string>
    <string name="donation_text">Donate to DerTeufel1980</string>
    <string name="label_cpu_tweak">CPU</string>
    <string name="label_idle_mode">Idle Mode</string>
    <string name="title_idle_mode">Set Idle Mode</string>
    <string name="label_governor">Governor</string>
    <string name="label_min_cpufreq">Min CPU freq</string>
    <string name="label_max_cpufreq">Max CPU freq</string>
    <string name="label_cpu_scaling">Set CPU freq limits</string>
    <string name="deepidle_tweak">Deep Idle</string>
    <string name="label_deepidle_stats">Idle Stats</string>
    <string name="label_state">State</string>
    <string name="label_time">Time (ms)</string>
    <string name="label_average">Avg (ms)</string>
    <string name="label_reset">Reset</string>
    <string name="label_close">Close</string>
    <string name="label_idle1">Idle</string>
    <string name="label_idle2">Deep Idle (TOP=ON)</string>
    <string name="label_idle3">Deep Idle (TOP=OFF)</string>
    <string name="liveoc_tweak">Live OC</string>
    <string name="label_liveoc_ocvalue">OC Value</string>
    <string name="label_liveoc_target_low">OC Target Low</string>
    <string name="label_liveoc_target_high">OC Target High</string>
    <string name="general_governor">General Governor Tweaks</string>
    <string name="label_smooth_ui_enabled">Smooth Ui</string>
    <string name="label_lazy">Lazy</string>
    <string name="label_screenoff_maxfreq">Screen off max freq</string>
    <string name="label_lulzactive">Lulzactive</string>
    <string name="label_lulzactive_inc_cpu_load">Inc CPU load</string>
    <string name="label_lulzactive_pump_up_step">Pump up step</string>
    <string name="label_lulzactive_pump_down_step">Pump down step</string>
    <string name="label_lulzactive_screen_off_min_step">Screen off min step</string>
    <string name="label_lulzactive_down_sample_time">Down sample time</string>
    <string name="label_lulzactive_up_sample_time">Up sample time</string>
    <string name="label_lulzactiveq">lulzactiveq</string>
    <string name="label_lulzactiveq_inc_cpu_load">Inc Cpu Load</string>
    <string name="label_lulzactiveq_dec_cpu_load">Dec CPU load</string>
    <string name="label_lulzactiveq_pump_up_step">Pump up step</string>
    <string name="label_lulzactiveq_pump_down_step">Pump down step</string>
    <string name="label_lulzactiveq_screen_off_max_step">Screen off max step</string>
    <string name="label_lulzactiveq_down_sample_time">Down sample time</string>
    <string name="label_lulzactiveq_up_sample_time">Up sample time</string>
    <string name="label_lulzactiveq_cpu_up_rate">Up_rate sample period</string>
    <string name="label_lulzactiveq_cpu_down_rate">Down_rate sample period</string>
    <string name="label_lulzactiveq_hispeed_freq">Hi-speed Freq</string>
    <string name="label_lulzactiveq_hotplug_freq_1_1">Turn 2nd Cpu online</string>
    <string name="label_lulzactiveq_hotplug_freq_2_0">Turn 2nd Cpu offline</string>
    <string name="label_lulzactiveq_hotplug_freq_2_1">Turn 3rd Cpu online</string>
    <string name="label_lulzactiveq_hotplug_freq_3_0">Turn 3rd Cpu offline</string>
    <string name="label_lulzactiveq_hotplug_freq_3_1">Turn 4th Cpu online</string>
    <string name="label_lulzactiveq_hotplug_freq_4_0">Turn 4th Cpu offline</string>
    <string name="label_lulzactiveq_hotplug_lock">Hotplug_lock online Cpus</string>
    <string name="label_lulzactiveq_hotplug_rq_1_1">rq: turn 2nd Cpu online</string>
    <string name="label_lulzactiveq_hotplug_rq_2_0">rq: turn 2nd Cpu offline</string>
    <string name="label_lulzactiveq_hotplug_rq_2_1">rq: turn 3rd Cpu online</string>
    <string name="label_lulzactiveq_hotplug_rq_3_0">rq: turn 3rd Cpu offline</string>
    <string name="label_lulzactiveq_hotplug_rq_3_1">rq: turn 4th Cpu online</string>
    <string name="label_lulzactiveq_hotplug_rq_4_0">rq: turn 4th Cpu offline</string>
    <string name="label_lulzactiveq_hotplug_sampling_rate">hotplug sample rate</string>
    <string name="label_lulzactiveq_ignore_nice_load">Ignore nice load</string>
    <string name="label_lulzactiveq_min_cpu_lock">min online cpus</string>
    <string name="label_lulzactiveq_max_cpu_lock">max online cpus</string>
    <string name="label_lulzactiveq_up_nr_cpus">auto-hotplug: min online cpus</string>
    <string name="label_hotplug">hotplug</string>
    <string name="label_hotplug_down_differential">Down Differential</string>
    <string name="label_hotplug_down_threshold">Down Threshold</string>
	<string name="eq_b1_title">Band 1 gain</string>
	<string name="eq_b2_title">Band 2 gain</string>
	<string name="eq_b3_title">Band 3 gain</string>
	<string name="eq_b4_title">Band 4 gain</string>
	<string name="eq_b5_title">Band 5 gain</string>
    <string name="color_control">Color Settings</string>
    <string name="color_calibration_category">Color Calibration</string>
    <string name="color_calibration">Color Calibration</string>
    <string name="label_master_sequence">Master Sequence</string>
    <string name="voodoo_color_category">Color and Mdnie Control</string>
    <string name="color_tuning_title_head">Color Tuning</string>
    <string name="color_tuning_summary_head">Calibrate screen color</string>
    <string name="mdnie_title_head">mDNIe Mode</string>
    <string name="mdnie_summary_head">Adjust mDNIe display post-processing</string>
    <string name="label_voodoo_gamma_presets">Voodoo Gamma Presets</string>
    <string name="label_hook_intercept">Register intercept</string>
    <string name="label_brightness_reduction">Brightness reduction</string>
    <string name="label_brightness_takeover_point">Takeover point</string>
    <string name="label_brightness_input_delta">Auto-brightness input delta</string>
    <string name="label_fb_delay">Front buffer delay</string>
    <string name="brightness_manipulation_category">Brightness</string>
    <string name="brightness_manipulation">Digital brightness manipulation</string>
    <string name="white_color_category">White colour temperature</string>
    <string name="white_color">Change white colour temperature</string>
    <string name="label_white_color_master">Colour temperature master switch</string>
    <string name="label_white_color_temperature">Colour temperature</string>
    <string name="button_reset_title">Reset</string>
</resources>