<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/mobi.cyann.deviltools" android:key="root" >

    <PreferenceCategory android:title="@string/gpu_voltage_category"
	android:key="key_voodoo_color_category" >
	<PreferenceScreen
        android:key="key_voodoo_color"
        android:title="@string/color_control" >
	   	 <!-- Color tuning -->
    		<mobi.cyann.deviltools.ColorTuningPreference 
	        android:key="color_tuning"
	        android:title="@string/color_tuning_title_head"
	        android:summary="@string/color_tuning_summary_head" />

    		<ListPreference
            	android:key="@string/key_voodoo_gamma_presets"
            	android:title="@string/label_voodoo_gamma_presets"
            	android:entries="@array/voodoo_gamma_presets_entries"
            	android:entryValues="@array/voodoo_gamma_presets_values"
            	android:summary="@string/status_not_available" />

	 	<!-- mDNIe Options -->
	 	<ListPreference
	        android:key="mdnie"
	        android:title="@string/mdnie_title_head"
	        android:summary="@string/mdnie_summary_head"
	        android:entries="@array/mdnie_entries"
	        android:entryValues="@array/mdnie_entries_values"
	        android:defaultValue="6" />
    	</PreferenceScreen>
    </PreferenceCategory>


</PreferenceScreen>
