<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="System Info" >
        <Preference
            android:key="system_memory"
            android:title="Toatal Ram"
            android:summary="MB">
        </Preference>

        <Preference
            android:key="kernel_version"
            android:title="Kernel"
            android:summary="version">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="Author" >
    <Preference
        android:title="Author"
        android:summary="Dominik Baronelli (derteufel1980)">
    </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/label_donation" >
        <PreferenceScreen
            android:key="@string/key_donation"
            android:summary="@string/donation_text" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/label_about" >
        <PreferenceScreen
            android:key="@string/key_about"
            android:summary="@string/about_desc"
            android:title="@string/about_text" />
    </PreferenceCategory>
    
</PreferenceScreen>
