<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dip">
                
        <TextView android:id="@+id/eq_b1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eq_b1_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/eq_b1_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b1_text"
                android:layout_alignParentEnd="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/eq_b1_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b1_value"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/eq_b2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b1_seekbar"
                android:text="@string/eq_b2_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/eq_b2_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b2_text"
                android:layout_alignParentEnd="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/eq_b2_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b2_value"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/eq_b3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b2_seekbar"
                android:text="@string/eq_b3_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/eq_b3_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b3_text"
                android:layout_alignParentEnd="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/eq_b3_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b3_value"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/eq_b4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b3_seekbar"
                android:text="@string/eq_b4_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/eq_b4_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b4_text"
                android:layout_alignParentEnd="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/eq_b4_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b4_value"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/eq_b5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b4_seekbar"
                android:text="@string/eq_b5_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/eq_b5_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b5_text"
                android:layout_alignParentEnd="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/eq_b5_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eq_b5_value"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@+id/eq_b5_seekbar"
                android:paddingTop="5dip" >

         <Button android:id="@+id/eq_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/button_reset_title" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
